# actix-oidc

./: Cargo.toml  saba.yml
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs  oidc.rs
src/client/: google.rs  mod.rs
src/domain/model/oidc_operation/: entity.rs
src/google/: auth.rs  oidc.rs
src/infrastructure/repository/: oidc_operation.rs
src/multiuse/: auth.rs  env.rs  error.rs  oidc.rs
src/presentation/http/handler/: oidc_operation.rs
src/usecase/: oidc_api.rs
src/utils/client/: google.rs
