[package]
name = "actix-oidc"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = { version = "0.9.0", features = ["redis", "redis-actor-session", "redis-rs-session", "redis-rs-tls-session"] }
actix-web = "4.5.1"
anyhow = "1.0.86"
async-trait = "0.1.80"
derive_more = "0.99.17"
openidconnect = { version = "3.5.0", features = ["reqwest", "rustls-tls"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.201", features = ["derive"] }
